# prayerTimes

./: .gitignore  LICENSE  Makefile.am  README.md  TODO.md  bootstrap  config.mk  configure.ac  makefile
src/: Makefile.am  args.c  args.h  astro.c  astro.h  logging.h  main.c  makefile  prtime
tests/: Makefile.am  astro_test.c  check_astro.c  makefile
